--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,25 @@
 body{
   margin: 0 auto;
-  background-image: url("main.jpg");
+  /*background-image: url("main.jpg");*/
+  background-color: rgb(87,160,211,0.7);
+ /* background-color: #e8ffff;*/
   background-repeat: no-repeat;
   background-size: 100% 1080px;
 }
 
+p[name=title]{
+  font-family: sans-serif;
+  font-size: 30px;
+  color: rgb(87,160,211,0.9);
+  background-color:#e8ffff;
+  text-align: center;
+  margin-top:100px;
+
+}
+
+div[name=side]{
+  position: relative;
+  width:100%;
+  height:100%;
+  border:1px solid #000;
+}
