--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ div[name=side]{
   margin-right: 0px;
   position: absolute;
   background-color:rgba(11,102,80,0.6);
+  float:left;
 
 }
 p{
@@ -23,6 +24,7 @@ p{
   background-color:rgba(11,102,80,0.6);
   text-align: center;
   margin-left:10%;
+
 
 }
 p[name=title]{
